--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -393,6 +393,12 @@ padding-top: 3rem;
 line-height: 1.6;
 
 }
+.width-90{
+  width:90%
+}
+.margin-left-5{
+  margin-left:5%;
+}
 .cw{
   color:white !important;
 }
