--- a/views/layout/contact.ejs
+++ b/views/layout/contact.ejs
@@ -1,16 +1,11 @@
 
-      <div style="padding-bottom:20%">
-        <p class="contact_info cw ">Phone:404-303-30303</p>
-      <p class="contact_info cw">Email:info@customfacilityservices.com</p>
-
-    </div>
     <div class="showboxcontact">
         <div class="blueboxcontact2"></div>
         <div class="blueboxcontact2 lb"></div>
         <div class="supportbox">
             <img class="showimg" src = "./assets/show.png" style="height:100%"/>
-            <p class="titleshow">Get a Quote Today!</p>
+            <p class="titleshow">Call Us Today!</p>
             <p class="titleshow2">We will reach back as fast as possible!</p>
-            <div class="quotebutton">Recieve a Quote</div>
+            <div class="quotebutton width-90 margin-left-5">480-040-3030</div>
         </div>
     </div>
