--- a/views/layout/contact.ejs
+++ b/views/layout/contact.ejs
@@ -4,8 +4,8 @@
         <div class="blueboxcontact2 lb"></div>
         <div class="supportbox">
             <img class="showimg" src = "./assets/show.png" style="height:100%"/>
-            <p class="titleshow">Call Us Today!</p>
-            <p class="titleshow2">We will reach back as fast as possible!</p>
-            <div class="quotebutton width-90 margin-left-5">480-040-3030</div>
+            <p class="titleshow text-center">Call Us Today!</p>
+            <p class="titleshow2 text-center">We will reach back as fast as possible!</p>
+            <div class="quotebutton width-90">480-040-3030</div>
         </div>
     </div>
