--- a/views/layout/contact.ejs
+++ b/views/layout/contact.ejs
@@ -4,7 +4,7 @@
         <div class="blueboxcontact2 lb"></div>
         <div class="supportbox">
             <img class="showimg" src = "./assets/show.png" style="height:100%"/>
-            <p class="titleshow text-center width-100">Call Us Today!</p>
+            <p class="titleshow text-center width-100">Contact Us!</p>
             <p class="titleshow2 text-center width-100">We will reach back as fast as possible!</p>
             <div class="quotebutton width-90">480-040-3030</div>
         </div>
