--- a/views/layout/contact.ejs
+++ b/views/layout/contact.ejs
@@ -4,8 +4,9 @@
         <div class="blueboxcontact2 lb"></div>
         <div class="supportbox">
             <img class="showimg" src = "./assets/show.png" style="height:100%"/>
-            <p class="titleshow text-center width-100">Contact Us!</p>
+            <p class="titleshow text-center width-100">Schedule a Cleaning!</p>
             <p class="titleshow2 text-center width-100">We will reach back as fast as possible!</p>
-            <div class="quotebutton width-90">480-040-3030</div>
+            <div class="quotebutton">480-040-3030</div>
+            <div class="quotebutton quote_small">info@customfacilityservices.com</div>
         </div>
     </div>
