--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -30,7 +30,7 @@
     </div>
 
     <div class="contact_section padding-5 relative padding-5 height-300">
-        <p class="about-us-title contact_us_title">info@customfacilityservices.com</p>
+        <p class="about-us-title contact_us_title"> Contact Us Today!</p>
         <div class="blueboxcontact"></div>
     </div>
     <div class="contact_info_section white-background width-100 background-white relative width-100">
