--- a/views/layout/contact.ejs
+++ b/views/layout/contact.ejs
@@ -6,7 +6,10 @@
             <img class="showimg" src = "./assets/show.png" style="height:100%"/>
             <p class="titleshow text-center width-100">Schedule a Cleaning!</p>
             <p class="titleshow2 text-center width-100">We will reach back as fast as possible!</p>
-            <div class="quotebutton">480-040-3030</div>
-            <div class="quotebutton quote_small">info@customfacilityservices.com</div>
+            <div class="quotebutton">
+                <p style="color:white;text-align:center;padding-bottom:5%;border-bottom:2px solid white;">480-822-0511</p>
+                <p style="color:white;text-align:center;padding-top:5%;">info@customfacilityservices.com</p>
+            </div>
+
         </div>
     </div>
