--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -793,8 +793,8 @@ cursor: auto;
     margin-right: 0%;
     outline: none;
     box-shadow: 1px 1px 1px 1px black;
+    right: 0%;
     margin-left: 0%;
-    left: 0%;
   }
   .quote_small{
     font-size:18px !important;
