--- a/views/layout/contact.ejs
+++ b/views/layout/contact.ejs
@@ -3,7 +3,7 @@
         <div class="blueboxcontact2"></div>
         <div class="blueboxcontact2 lb"></div>
         <div class="supportbox">
-            <img class="showimg" src = "./assets/show.png" style="height:100%"/>
+            <img class="showimg" src = "./assets/show.png" style="height:100%;margin-top:15%;"/>
             <p class="titleshow text-center width-100">Schedule a Cleaning!</p>
             <p class="titleshow2 text-center width-100">We will reach back as fast as possible!</p>
             <div class="quotebutton">
