--- a/views/layout/contact.ejs
+++ b/views/layout/contact.ejs
@@ -3,10 +3,10 @@
         <div class="blueboxcontact2"></div>
         <div class="blueboxcontact2 lb"></div>
         <div class="supportbox">
-            <img class="showimg" src = "./assets/show.png" style="height:100%;margin-top:15%;"/>
+            <img class="showimg" src = "./assets/show.png" style="height:100%;margin-top:55%;"/>
             <p class="titleshow text-center width-100">Schedule a Cleaning!</p>
             <p class="titleshow2 text-center width-100">We will reach back as fast as possible!</p>
-            <div class="quotebutton">
+            <div class="quotebutton width-100">
                 <p style="color:white;text-align:center;padding-bottom:5%;border-bottom:2px solid white;">480-822-0511</p>
                 <p style="color:white;text-align:center;padding-top:5%;">info@customfacilityservices.com</p>
             </div>
