--- a/views/layout/about.ejs
+++ b/views/layout/about.ejs
@@ -2,8 +2,10 @@
 
     <div class="col-5 values_container">
       <div class="text-about-us-box dropdown-box" _id = 1>
+        <div class="row">
+          <div class="col-10">
           <p class="about-us-text">Connect With People</p>
-          <div class="row">
+          </div>
 
             <div class="col-2">
               <img src ="./assets/dropdown_arrow.png" _id=1 class="dropdown_arrow"/>
@@ -17,8 +19,10 @@
             </div>
       </div>
         <div class="text-about-us-box dropdown-box" _id = 2>
-            <p class="about-us-text">Honest Work</p>
             <div class="row">
+            <div class="col-10">
+              <p class="about-us-text">Honest Work</p>
+            </div>
 
               <div class="col-2">
                 <img src ="./assets/dropdown_arrow.png" _id=2 class="dropdown_arrow"/>
@@ -33,8 +37,10 @@
         </div>
 
         <div class="text-about-us-box dropdown-box" _id = 3>
-            <p class="about-us-text">Accountability</p>
             <div class="row">
+              <div class="col-10">
+            <p class="about-us-text">Accountability</p>
+            </div>
 
               <div class="col-2">
                 <img src ="./assets/dropdown_arrow.png" _id=3 class="dropdown_arrow"/>
@@ -48,9 +54,10 @@
               </div>
         </div>
         <div class="text-about-us-box dropdown-box" _id = 4>
-
-            <p class="about-us-text">Positivity</p>
             <div class="row">
+              <div class="col-10">
+            <p class="about-us-text">Positivity</p>
+            </div>
 
               <div class="col-2">
                 <img src ="./assets/dropdown_arrow.png" _id=4 class="dropdown_arrow"/>
