--- a/views/layout/contact.ejs
+++ b/views/layout/contact.ejs
@@ -7,8 +7,8 @@
             <p class="titleshow text-center width-100">Schedule a Cleaning!</p>
             <p class="titleshow2 text-center width-100">We will reach back as fast as possible!</p>
             <div class="quotebutton width-100">
-                <p style="color:white;text-align:center;padding-bottom:5%;border-bottom:2px solid white;">480-822-0511</p>
-                <p style="color:white;text-align:center;padding-top:5%;">info@customfacilityservices.com</p>
+                <p style="color:white;text-align:center;padding-top:2.5%;padding-bottom:2.5%;border-bottom:2px solid white;">480-822-0511</p>
+                <p style="color:white;text-align:center;padding-bottom:2.5%;padding-top:2.5%;">info@customfacilityservices.com</p>
             </div>
 
         </div>
