--- a/views/layout/quote/before_and_after.ejs
+++ b/views/layout/quote/before_and_after.ejs
@@ -8,11 +8,11 @@
           <div class="row"style="margin-top:5%">
               <div class="col-6 relative"style="position:relative">
                   <div class="before_background"style="z-index:-1;background:#013d84;position:absolute;top:-10%;left:0%;width:100%;height:120%;"></div>
-                  <img class="before_image width-100 relative" style="width:100%;height:350px"  src ="<%= images.before %>" />
+                  <img class="before_image width-100 relative" style="width:100%;height:100%"  src ="<%= images.before %>" />
               </div>
               <div class="col-6 relative" style="position:relative">
                   <div class="after_background"style="z-index:-1;background:#014884;position:absolute;top:-10%;right:0%;width:100%;height:120%"></div>
-                  <img class="after_image width-100"  style="width:100%;height:350px" src ="<%= images.after %>"  />
+                  <img class="after_image width-100"  style="width:100%;height:100%" src ="<%= images.after %>"  />
               </div>
           </div>
         <%}%>
