--- a/views/layout/quote/before_and_after.ejs
+++ b/views/layout/quote/before_and_after.ejs
@@ -1,5 +1,5 @@
 <div style="margin-top:0%">
-  <p style="color:white;font-family: 'Akrobat';text-align:center;font-size:40px;font-weight:bold;width:40%;padding:1%;background:navy">Our Work </p>
+  <p class="before_after_title"style="color:white;font-family: 'Akrobat';text-align:center;font-size:40px;font-weight:bold;width:40%;padding:1%;background:navy">Our Work </p>
 <div class="row"style="margin-top:5%">
   <div class="col-1"></div>
   <div class="col-10">
