--- a/views/layout/quote/before_and_after.ejs
+++ b/views/layout/quote/before_and_after.ejs
@@ -1,16 +1,35 @@
 <div style="margin-top:0%">
-  <p class="before_after_title"style="color:white;font-family: 'Akrobat';text-align:center;font-size:40px;font-weight:bold;width:40%;padding:1%;background:navy">Our Work </p>
-<div class="row"style="margin-top:5%">
-  <div class="col-1"></div>
-  <div class="col-10">
+  <p class="before_after_title"style="color:white;font-family: 'Akrobat';text-align:center;font-size:40px;font-weight:bold;width:40%;padding:1%;background:#00103d">Our Work </p>
+
+  <div class="row"style="margin-top:5%">
+    <div class="col-1"></div>
+    <div class="col-10">
+      <div class="row">
+    <div class="col-6"style="background:#013d84">
+       <p style="color:white;font-family:'Akrobat';text-align:center;font-size:25px;padding-top:2.5%;padding-bottom:2.5%;border-bottom:1px solid #014884">Before </p>
+    </div>
+    <div class='col-6'style="background:#014884">
+      <p style="color:white;font-family:'Akrobat';text-align:center;font-size:25px;padding-top:2.5%;padding-bottom:2.5%;border-bottom:1px solid #013d84">After </p>
+
+    </div>
+    </div>
+    </div>
+    </div>
+    <div class="row">
+
+  <div class="col-1 mobile_spacer"></div>
+
+  <div class="col-10 desktop_ba_col">
         <% if(before_and_after_images.length >0){%>
         <% for(let images of before_and_after_images) { %>
-          <div class="row"style="margin-top:5%">
+          <div class="row">
+
               <div class="col-6 relative"style="position:relative">
                   <div class="before_background"style="z-index:-1;background:#013d84;position:absolute;top:-10%;left:0%;width:100%;height:120%;"></div>
                   <img class="before_image width-100 relative" style="width:100%;height:100%"  src ="<%= images.before %>" />
               </div>
               <div class="col-6 relative" style="position:relative">
+
                   <div class="after_background"style="z-index:-1;background:#014884;position:absolute;top:-10%;right:0%;width:100%;height:120%"></div>
                   <img class="after_image width-100"  style="width:100%;height:100%" src ="<%= images.after %>"  />
               </div>
