--- a/views/layout/quote/before_and_after.ejs
+++ b/views/layout/quote/before_and_after.ejs
@@ -2,8 +2,8 @@
   <p class="before_after_title"style="color:white;font-family: 'Akrobat';text-align:center;font-size:40px;font-weight:bold;width:40%;padding:1%;background:#00103d">Our Work </p>
 
   <div class="row"style="margin-top:5%">
-    <div class="col-1"></div>
-    <div class="col-10">
+    <div class="col-1 mobile_spacer"></div>
+    <div class="col-10 desktop_ba_col">
       <div class="row">
     <div class="col-6"style="background:#013d84">
        <p style="color:white;font-family:'Akrobat';text-align:center;font-size:25px;padding-top:2.5%;padding-bottom:2.5%;border-bottom:1px solid #014884">Before </p>
