--- a/public/assets/css/quote.css
+++ b/public/assets/css/quote.css
@@ -79,6 +79,10 @@ label{
     padding-top:10%;
 
   }
+  .before_image{
+    width:100%;
+    height:100%;
+  }
   .before_after_title{
     width:80% !important;
   }
@@ -112,9 +116,13 @@ label{
   .mobile_spacer{
     max-width:0% !important;
     width:0% !important;
+    flex:0%;
   }
   .desktop_ba_col {
-    max-width: 100% !important;
-    width:100% !important;
+    max-width: 95% !important;
+    width:95% !important;
+    flex:  0 0 95%;
+    margin-left:2.5%;
   }
+
 }
