--- a/views/layout/quote/before_and_after.ejs
+++ b/views/layout/quote/before_and_after.ejs
@@ -6,10 +6,10 @@
     <div class="col-10 desktop_ba_col">
       <div class="row">
     <div class="col-6"style="background:#013d84">
-       <p style="color:white;font-family:'Akrobat';text-align:center;font-size:25px;padding-top:2.5%;padding-bottom:2.5%;border-bottom:1px solid #014884">Before </p>
+       <p style="color:white;font-family:'Akrobat';text-align:center;font-size:25px;padding-top:2.5%;padding-bottom:2.5%">Before </p>
     </div>
     <div class='col-6'style="background:#014884">
-      <p style="color:white;font-family:'Akrobat';text-align:center;font-size:25px;padding-top:2.5%;padding-bottom:2.5%;border-bottom:1px solid #013d84">After </p>
+      <p style="color:white;font-family:'Akrobat';text-align:center;font-size:25px;padding-top:2.5%;padding-bottom:2.5%">After </p>
 
     </div>
     </div>
