--- a/views/layout/quote/quote_sheet.ejs
+++ b/views/layout/quote/quote_sheet.ejs
@@ -1,5 +1,6 @@
 <div class="quotesheet_container" >
-  <p class="quotesheet_title">Receive a Free Quote and Make Your Windows Shine!</p>
+  <p class="before_after_title"style="color:white;font-family: 'Akrobat';text-align:center;font-size:40px;font-weight:bold;width:40%;padding:1%;background:#00103d">Free Quote! </p>
+  <p class="quotesheet_title">Make Your Windows Shine Today!</p>
   <form action="/schedule" action="POST">
   <div class="row ">
       <div class="col-12">
