--- a/views/user/schedule.ejs
+++ b/views/user/schedule.ejs
@@ -16,6 +16,7 @@
 
 
 </div>
+<p class="before_after_title"style="color:white;font-family: 'Akrobat';text-align:center;font-size:40px;font-weight:bold;width:40%;padding:1%;background:#00103d">Free Quote! </p>
   <br />
   <%- include("./../layout/quote/quote_sheet.ejs") %>
   <br />
