--- a/views/user/schedule.ejs
+++ b/views/user/schedule.ejs
@@ -16,8 +16,9 @@
 
 
 </div>
-<p class="before_after_title"style="color:white;font-family: 'Akrobat';text-align:center;font-size:40px;font-weight:bold;width:40%;padding:1%;background:#00103d">Free Quote! </p>
   <br />
+  <p class="before_after_title"style="color:white;margin-top:25%;font-family: 'Akrobat';text-align:center;font-size:40px;font-weight:bold;width:40%;padding:1%;background:#00103d">Free Quote! </p>
+
   <%- include("./../layout/quote/quote_sheet.ejs") %>
   <br />
   <%- include("./../layout/quote/before_and_after.ejs") %>
