--- a/views/layout/quote/showcase.ejs
+++ b/views/layout/quote/showcase.ejs
@@ -14,10 +14,10 @@
 
       <div class="intro-text-container intro-about-container">
           <div class="big-text-container big-text-container-ani-1 big-text-quote big-text-about-small">
-                <p class="big-text big-text-about">Clean Windows Today!</p>
+                <p class="big-text big-text-about">Clean Your Windows Today!</p>
           </div>
             <div class="big-text-container big-text-container-ani-2 width-120 big-text-about big-text-about-bigger" >
-                <p class="big-text  text-center big-text-about">Free Quote!</p>
+                <p class="big-text big-text-about">480-292-2922</p>
             </div>
 
         <div class="banners_about row relative">
