--- a/views/layout/quote/quote_sheet.ejs
+++ b/views/layout/quote/quote_sheet.ejs
@@ -1,5 +1,5 @@
 <div>
-  <p class="before_after_title free_quote_title"style="color:white;margin-top:25% !important;font-family: 'Akrobat';text-align:center;font-size:40px;font-weight:bold;width:40%;padding:1%;background:#00103d">Free Quote! </p>
+  <p class="before_after_title free_quote_title"style="color:white;margin-top:25% ;font-family: 'Akrobat';text-align:center;font-size:40px;font-weight:bold;width:40%;padding:1%;background:#00103d">Free Quote! </p>
 
 <div class="quotesheet_container" >
   <p class="quotesheet_title">Make Your Windows Shine Today!</p>
