--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -34,7 +34,8 @@
         <div class="blueboxcontact"></div>
     </div>
     <div class="contact_info_section white-background width-100 background-white relative width-100">
-
+      <p class="before_after_title bkc bkq"style="color:white;font-family: 'Akrobat';text-align:left;font-size:40px;font-weight:bold;width:40%;padding:1%;padding-left:5%;background:#00103d">489-939-9393 </p>
+      <p class="before_after_title bkc "style="color:white;font-family: 'Akrobat';text-align:left;font-size:40px;font-weight:bold;width:90%;padding:1%;padding-left:5%;background:#00103d">info@customfacilityservices.com </p>
         <%- include("./../layout/contact.ejs") %>
     </div>
 </div>
