--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -451,7 +451,6 @@ line-height: 1.6;
   font-family: "Akrobat";
   font-size:60px;
   text-align: center;
-  right:2.5%;
   position: absolute;
   top:10%;
   z-index:9;
@@ -461,13 +460,13 @@ line-height: 1.6;
   font-family: "Akrobat";
   font-size:20px;
   text-align: center;
-  right:7.5%;
   position: absolute;
-  top:30%;
+  top:35%;
   z-index:9;
 }
+
 .quotebutton{
-  padding:2%;
+  padding:1%;
   background:black;
   color:white;
   text-align:  center;
@@ -476,8 +475,8 @@ line-height: 1.6;
   position: absolute;
   top:60%;
   width:30%;
-  margin-right: 2.5%;
   outline:none;
+  padding-top:0% !important;
   box-shadow:1px 1px 1px 1px black;
   right:0%;
 }
@@ -616,12 +615,18 @@ cursor: auto;
 .bigger-text-container{
   width:175% !important;
 }
+.showimg{
+  margin-top:30%;
+  width:100%;
+  height:100%;
+}
 
 
 @media screen and (max-width:944px){
 .active-dropdown{
   height:300px !important;
 }
+
 .showcase-container {
   margin-top:10%;
 }
@@ -843,5 +848,12 @@ cursor: auto;
   }
   .banners{
     top:35% !important;
+  }
+  .bkq{
+    width:60% !important;
+  }
+  .bkc{
+    width:90% ;
+    font-size:25px !important;
   }
 }
