--- a/public/assets/css/quote.css
+++ b/public/assets/css/quote.css
@@ -66,10 +66,14 @@ label{
 .quotebutton:hover{
   box-shadow:1px 1px 9px 2px black;
 }
+
 @media screen and (max-width:844px){
   .quote_showcase_image{
     width:100%;
     height:600px !important;
+  }
+  .showimg{
+    margin-top:55%;
   }
   .quotesheet_container{
     margin-top:10% !important;
