--- a/views/user/contact_us.ejs
+++ b/views/user/contact_us.ejs
@@ -1,5 +1,5 @@
 
-  <%- include("./../layout/quote/head.ejs") %>
+  <%- include("./../layout/contact/head.ejs") %>
 <div id="wrapper" class="<%=lock %> ">
     <div class="container-fluid home_page padding-bottom-75" >
 
@@ -12,6 +12,9 @@
       <div class="showcase-container relative width-100">
         <%- include("./../layout/contact/showcase.ejs") %>
       </div>
+      <%- include("./../layout/contact/meet_the_owners.ejs") %>
+
+          <%- include("./../layout/contact/what_we_do.ejs") %>
 
 
   </div>
