--- a/views/layout/contact/what_we_do.ejs
+++ b/views/layout/contact/what_we_do.ejs
@@ -1,7 +1,7 @@
 <div class="work_container relative">
 
       <div class="what_we_do_inner we_clean_inner">
-        <div class="row">
+        <div class="row mobile_margin-top-5">
 
           <div class="col-6 mobile_wej padding-left-5">
             <p class="what_we_do_title we_clean"> What We Clean </p>
