--- a/public/assets/css/contact_us.css
+++ b/public/assets/css/contact_us.css
@@ -31,7 +31,7 @@
 }
 @media screen and (max-width:844px){
   .meet_owners_container{
-    margin-top:100%;
+    margin-top:130% !important;
   }
   .mobile-margin-top-5{
     margin-top:10%;
