--- a/public/assets/css/contact_us.css
+++ b/public/assets/css/contact_us.css
@@ -33,6 +33,15 @@
   .meet_owners_container{
     margin-top:130% !important;
   }
+  .fh{
+    width:80% !important;
+  }
+  .gh{
+    width:90% !important;
+  }
+  .fhy{
+    font-size:25px !important;
+  }
   .mobile-margin-top-5{
     margin-top:10%;
   }
