--- a/views/layout/contact/showcase.ejs
+++ b/views/layout/contact/showcase.ejs
@@ -13,11 +13,11 @@
   </div>
 
       <div class="intro-text-container intro-about-container">
-          <div class="big-text-container big-text-container-ani-1 big-text-quote big-text-about-small">
+          <div class="big-text-container big-text-container-ani-1 big-text-quote big-text-about-small fh">
                 <p class="big-text big-text-about">594-040-4040!</p>
           </div>
-            <div class="big-text-container big-text-container-ani-2 width-120 big-text-about big-text-about-bigger" >
-                <p class="big-text big-text-about">info@customfacilityservices.com</p>
+            <div class="big-text-container big-text-container-ani-2 width-120 big-text-about big-text-about-bigger gh" >
+                <p class="big-text big-text-about fhy">info@customfacilityservices.com</p>
             </div>
 
         <div class="banners_about row relative">
