--- a/views/layout/contact/meet_the_owners.ejs
+++ b/views/layout/contact/meet_the_owners.ejs
@@ -1,7 +1,7 @@
 <div class="meet_owners_container">
   <p class="before_after_title cfs_text_box desktop_owners_text_box mobile_owners_text_box">Meet the Owners </p>
 
-  <div class='row margin-top-5'>
+  <div class='row margin-top-10 mobile-margin-top-15'>
     <div class="col-2"></div>
     <div class="col-8">
         <div class='row'>
@@ -9,7 +9,7 @@
               <img class ="width-100" src = "./assets/me.png" />
               <p class="owner_name">Marco Khodr </p>
             </div>
-            
+
             <div class="col-6 mobile_col_owner">
               <img class ="width-100" src = "./assets/you.png" />
               <p class="owner_name">Tommy Tejada </p>
