--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -12,7 +12,7 @@
       </div>
 
       <div class="showcase-container relative width-100">
-        <%- include("./../layout/showcase.ejs") %>
+        <%- include("./../layout/new_showcase.ejs") %>
       </div>
 
 
