--- a/views/user/schedule.ejs
+++ b/views/user/schedule.ejs
@@ -11,7 +11,7 @@
   </div>
 
   <div class="showcase-container relative width-100">
-    <%- include("./../layout/quote/showcase.ejs") %>
+    <%- include("./../layout/new_showcase.ejs") %>
   </div>
 
 
