--- a/views/layout/contact/head.ejs
+++ b/views/layout/contact/head.ejs
@@ -15,6 +15,7 @@
          <link rel="stylesheet" type="text/css" href="./assets/css/quote.css" />
            <link rel="stylesheet" type="text/css" href="./assets/css/mobile_navbar.css" />
            <link rel="stylesheet" type="text/css" href="./assets/css/contact_us.css" />
+           <link rel="stylesheet" type="text/css" href="./assets/css/showcase.css" />
 
      <link href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.5.0/components/header.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
