--- a/views/user/about_us.ejs
+++ b/views/user/about_us.ejs
@@ -11,7 +11,7 @@
     </div>
 
     <div class="showcase-container relative width-100">
-      <%- include("./../layout/about/showcase.ejs") %>
+      <%- include("./../layout/new_showcase.ejs") %>
     </div>
 
     <%- include("./../layout/about/mission.ejs") %>
