--- a/views/user/contact_us.ejs
+++ b/views/user/contact_us.ejs
@@ -10,7 +10,7 @@
       </div>
 
       <div class="showcase-container relative width-100">
-        <%- include("./../layout/contact/showcase.ejs") %>
+        <%- include("./../layout/new_showcase.ejs") %>
       </div>
       <%- include("./../layout/contact/meet_the_owners.ejs") %>
 
