--- a/public/assets/css/showcase.css
+++ b/public/assets/css/showcase.css
@@ -141,6 +141,9 @@
    .mobile-padding-10{
      padding:10% !important;
    }
+   .mobile-padding-5{
+     padding:5% !important;
+   }
    .mobile-width-80{
      width:80% !important;
    }
