--- a/public/assets/css/showcase.css
+++ b/public/assets/css/showcase.css
@@ -141,6 +141,9 @@
    .mobile-padding-10{
      padding:10% !important;
    }
+   .intro-text-container{
+     margin-top:15%;
+   }
    .mobile-padding-5{
      padding:5% !important;
    }
