--- a/views/layout/new_showcase.ejs
+++ b/views/layout/new_showcase.ejs
@@ -2,8 +2,8 @@
 
   <div class="row relative">
 
-      <div class="col-4 no-pad relative no-background z-99">
-          <div class=" foreground width-50 padding-left-2_5 margin-left-2_5 margin-top-2_5 logo_container ">
+      <div class="col-4 no-pad relative no-background z-99 margin-top-2_5">
+          <div class=" foreground width-50 padding-left-2_5 margin-left-2_5 margin-top-5 logo_container ">
             <img src = "./assets/logo.png"class="width-100" />
           </div>
           <div class="background width-50 text-container no-background">
