--- a/views/layout/new_showcase.ejs
+++ b/views/layout/new_showcase.ejs
@@ -6,7 +6,7 @@
           <div class=" foreground width-50 padding-left-2_5 margin-left-2_5 margin-top-5 logo_container ">
             <img src = "./assets/logo.png"class="width-100" />
           </div>
-          <div class="background width-50 text-container no-background">
+          <div class="background width-50 text-container light-blue-background">
           </div>
       </div>
 
