--- a/views/layout/new_showcase.ejs
+++ b/views/layout/new_showcase.ejs
@@ -3,10 +3,10 @@
   <div class="row relative">
 
       <div class="col-4 no-pad relative no-background z-99 margin-top-2_5">
-          <div class=" foreground width-50 padding-left-2_5 margin-left-2_5 margin-top-5 logo_container ">
+          <div class=" foreground width-50 padding-left-2_5 margin-left-2_5 margin-top-5 logo_container light-blue-background">
             <img src = "./assets/logo.png"class="width-100" />
           </div>
-          <div class="background width-50 text-container light-blue-background">
+          <div class="background width-50 text-container ">
           </div>
       </div>
 
