--- a/public/assets/css/showcase.css
+++ b/public/assets/css/showcase.css
@@ -26,6 +26,9 @@
   .cfs-heading-background{
         background: #00103d;
   }
+  .turquoise-background{
+    background:#226D99 !important;
+  }
   .light-blue-background{
     background: #00b1ff;
   }
