--- a/views/layout/new_showcase.ejs
+++ b/views/layout/new_showcase.ejs
@@ -2,11 +2,11 @@
 
   <div class="row relative">
 
-      <div class="col-4 no-pad relative no-background z-99 margin-top-2_5">
+      <div class="col-4 no-pad relative no-background z-99 ">
           <div class=" foreground width-50 padding-left-2_5 margin-left-2_5 margin-top-5 logo_container light-blue-background">
             <img src = "./assets/logo.png"class="width-100" />
           </div>
-          <div class="background width-50 text-container turquoise-background "style="height:500px;position:absolute;top:0%">
+          <div class="background width-50 text-container turquoise-background "style="height:900px;position:absolute;top:-5%">
           </div>
       </div>
 
