--- a/public/assets/css/cfs_modal.css
+++ b/public/assets/css/cfs_modal.css
@@ -1,21 +1,19 @@
 .cfs_modal{
-  position: absolute;
-  top:2.5%;
-  width:100%;
-  left:0%;
   opacity:0;
   visibility: hidden;
+  z-index:-99;
+}
+.modal_pos{
+  top:2.5%;
+  left:0%;
 }
 .active_modal{
   opacity:1;
   z-index:999;
   visibility: visible;
-  position: absolute;
-  top:2.5%;
-  width:100%;
-  left:0%;
   animation:modal_appear .5s 1 ease-in;
 }
+
 @keyframes modal_appear{
   0%{
     top:-100%;
@@ -31,81 +29,33 @@
     opacity:.5 !important;
     padding-bottom:10%;
     background:black !important;
-    z-index:999;
-    top:0%;
-    left:0%;
-    height:1080px;
-    width:100%;
-    position: absolute;
 }
 .cfs_modal_wrapper{
+  opacity:0;
   width:100%;
   height:1080px;
-  opacity:0;
+}
+.modal_wrapper_pos{
   top:0%;
   left:0%;
+  z-index:999;
   position: absolute;
-
 }
 #modal_exit{
   color:#1B1742;
-  position:absolute;
   top:2%;
   left:2%;
-  font-size:25px;
-  z-index:999
 }
+
 #modal_exit:hover{
   color:black !important;
 }
-.modal_body{
-  background:#1B1742;
-  border-radius:5px;
-  padding-bottom:2.5%;
-  box-shadow:1px 1px 9px 2px black;
 
-}
-.quote_title{
-  font-size: 30px;
-  color:white;
-  text-align: center;
-font-weight: bold;
-font-family: "Akrobat";
-}
-.quote_number{
-  font-size: 25px;
-  color:white;
-
-  text-align: center;
-  font-family: "Akrobat";
-}
-.quote_contact_us{
-  margin-top:10%;
-  color:white;
-
-}
-
-.quote_pitch{
-  font-size:16px;
-  font-style: italic;
-  color:white;
-
-  text-align: center;
-  font-family: "Akrobat";
-}
 .quote_button_modal{
-  width:90%;
   margin-top:1%;
-  margin-left: 5%;
-  border-radius:30px;
   border-width:2px !important;
-  color:white ;
-  position: relative;
-  z-index:999999;
-  background:transparent !important;
-  border-color:white ;
-
 }
+
 .quote_button_modal:hover{
   color:white !important;
   background:black !important;
