--- a/views/layout/modal.ejs
+++ b/views/layout/modal.ejs
@@ -1,24 +1,24 @@
 
 <% if(modal){ %>
-<div class= "cfs_modal_wrapper <%= modal.wrapper%>" id="blackWrapper"></div>
+<div class= "cfs_modal_wrapper <%= modal.wrapper%> modal_wrapper_pos" id="blackWrapper"></div>
 
 
-<div class=" cfs_modal <%= modal.modal  %>" id="mainModal"> tabindex="-1">
+<div class=" cfs_modal <%= modal.modal  %> width-100 modal_pos absolute" id="mainModal"> tabindex="-1">
   <div class="row">
-      <div class="col-3 modal_divider"></div>
-      <div class='col-6 modal_body no-padding modal_col'>
+      <div class="col-3 mobile-col-1"></div>
+      <div class='col-6 modal_body no-padding mobile-col-10 modal-background border-radius-5px heavy-shadow padding-bottom-2_5'>
 
           <img class="width-100" src="./assets/window_1.png"/>
-          <a href="/exit"><p id="modal_exit">X</p></a>
+          <a href="/exit"><p class="super-max-z font-25 absolute"id="modal_exit">X</p></a>
         <div class="modal-dialog">
 
-          <p class="quote_title">Your Quote:</p>
+          <p class="quote_title font-30 white bold akrobat text-center">Your Quote:</p>
 
-          <p class="quote_number">$<%=modal.outside %> Inside or Outside</p>
-          <p class="quote_number">$<%=modal.total_price %> Inside and Outside</p>
-          <div class="quote_contact_us">
-            <p class="quote_pitch">Schedule a Cleaning Now!</p>
-            <button class="btn btn-danger quote_button_modal">489-494-4094</button>
+          <p class="quote_number font-25 white bold akrobat text-center">$<%=modal.outside %> Inside or Outside</p>
+          <p class="quote_number font-25 margin-top-2_5 akrobat text-center">$<%=modal.total_price %> Inside and Outside</p>
+          <div class="quote_contact_us font-25 margin-top-2_5 akrobat text-center margin-top-10">
+            <p class="quote_pitch italic font-16 white akrobat white text-center">Schedule a Cleaning Now!</p>
+            <button class="btn btn-danger quote_button_modal width-90 margin-left-5 border-color-white white akrobat transparent border-radius-30px relative super-max-z">489-494-4094</button>
 
         </div>
 
