--- a/views/layout/quote/quote_sheet.ejs
+++ b/views/layout/quote/quote_sheet.ejs
@@ -1,45 +1,45 @@
-<div>
-  <p class="before_after_title free_quote_title"style="color:white;margin-top:25% ;font-family: 'Akrobat';text-align:center;font-size:40px;font-weight:bold;width:40%;padding:1%;background:#00103d">Free Quote! </p>
+<div class="quotesheet_wrapper">
+  <p class="mobile-width-80 width-40 text-banner">Free Quote! </p>
 
-<div class="quotesheet_container" >
-  <p class="quotesheet_title">Make Your Windows Shine Today!</p>
+<div class="quotesheet_container mobile-margin-top-10 padding-5 white-background margin-bottom-5 padding-bottom-15 heavy-shadow margin-left-5 width-90 gray-border margin-top-5 margin-top-20" >
+  <p class="quotesheet_title text-center akrobat font-25 bold">Make Your Windows Shine Today!</p>
   <form action="/schedule" action="POST">
-  <div class="row ">
+  <div class="row padding-bottom-15">
       <div class="col-12">
           <label>
               First Name
           </label>
-          <input class="form-control quote_input" name="firstName" placeholder="Enter first name" />
+          <input class="form-control quote_input akrobat no-radius black-bottom-border font-20 no-border" name="firstName" placeholder="Enter first name" />
       </div>
       <div class="col-12">
           <label>
               Last Name
           </label>
-          <input class="form-control quote_input" name="lastName" placeholder="Enter last name" />
+          <input class="form-control quote_input no-border black-bottom-border no-radius akrobat font-20" name="lastName" placeholder="Enter last name" />
       </div>
       <div class="col-12">
           <label>
               Address
           </label>
-          <input class="form-control quote_input" name="address" placeholder="Enter address" />
+          <input class="form-control quote_input no-border black-bottom-border no-radius akrobat font-20" name="address" placeholder="Enter address" />
       </div>
       <div class="col-12">
           <label>
               Windows Less than 4X4 Ft
           </label>
-          <input class="form-control quote_input" name="smallWindows" placeholder="Enter Window Count" />
+          <input class="form-control quote_input no-border black-bottom-border no-radius akrobat font-20" name="smallWindows" placeholder="Enter Window Count" />
       </div>
       <div class="col-12">
           <label>
               Windows Bigger than 4X4 and Less than 8X8 Ft
           </label>
-          <input class="form-control quote_input" name="mediumWindows" placeholder="Enter Window Count" />
+          <input class="form-control quote_input no-border black-bottom-border no-radius akrobat font-20" name="mediumWindows" placeholder="Enter Window Count" />
       </div>
       <div class="col-12">
           <label>
               Windows Bigger than 8X8 Ft
           </label>
-          <input class="form-control quote_input" name="largeWindows" placeholder="Enter Window Count" />
+          <input class="form-control quote_input no-border black-bottom-border no-radius akrobat font-20" name="largeWindows" placeholder="Enter Window Count" />
       </div>
       <div class="col-3"></div>
       <div class="col-6">
