--- a/views/user/schedule.ejs
+++ b/views/user/schedule.ejs
@@ -2,7 +2,7 @@
 <div id="wrapper" class="<%=lock %> ">
   <%- include("./../layout/modal.ejs") %>
 
-<div class="container-fluid home_page padding-bottom-75" >
+<div class="container-fluid " >
 
   <div class="row">
       <div class="col-12 padding-1 background-1a navbar_container" >
