--- a/views/layout/quote/before_and_after.ejs
+++ b/views/layout/quote/before_and_after.ejs
@@ -1,37 +1,37 @@
-<div style="margin-top:10%">
-  <p class="before_after_title"style="color:white;font-family: 'Akrobat';text-align:center;font-size:40px;font-weight:bold;width:40%;padding:1%;background:#00103d">Our Work </p>
+<div class="margin-top-5">
+  <p class="before_after_title text-banner mobile-width-80">Our Work </p>
 
-  <div class="row"style="margin-top:10%">
-    <div class="col-1 mobile_spacer"></div>
-    <div class="col-10 desktop_ba_col">
-      <div class="row">
-    <div class="col-6"style="background:#013d84">
-       <p style="color:white;font-family:'Akrobat';text-align:center;font-size:25px;padding-top:2.5%;padding-bottom:2.5%">Before </p>
-    </div>
-    <div class='col-6'style="background:#014884">
-      <p style="color:white;font-family:'Akrobat';text-align:center;font-size:25px;padding-top:2.5%;padding-bottom:2.5%">After </p>
+  <div class="row margin-top-5">
+      <div class="col-1 no-col"></div>
+      <div class="col-10 mobile-col-11">
+        <div class="row">
+          <div class="col-6 dark-navy-background">
+             <p class="akrobat white text-center font-25 padding-top-2_5 padding-bottom-2_5">Before </p>
+          </div>
+          <div class='col-6 dark-navy-background'>
+            <p class="akrobat white text-center font-25 padding-top-2_5 padding-bottom-2_5">After </p>
 
-    </div>
-    </div>
-    </div>
-    </div>
+          </div>
+        </div>
+      </div>
+   </div>
     <div class="row">
 
-  <div class="col-1 mobile_spacer"></div>
+  <div class="col-1 no-col"></div>
 
-  <div class="col-10 desktop_ba_col">
+  <div class="col-10 mobile-margin-left-2_5 mobile-col-11">
         <% if(before_and_after_images.length >0){%>
         <% for(let images of before_and_after_images) { %>
           <div class="row">
 
-              <div class="col-6 relative"style="position:relative;margin-top:5%;">
-                  <div class="before_background"style="z-index:-1;background:#013d84;position:absolute;top:-10%;left:0%;width:100%;height:120%;"></div>
-                  <img class="before_image width-100 relative" style="width:100%;height:100%"  src ="<%= images.before %>" />
+              <div class="col-6 relative margin-top-5">
+                  <div class="adjust-top min-z dark-navy-background absolute height-100 mobile-height-120 absolute width-100"></div>
+                  <img class=" width-100 height-100 relative mobile-margin-top-10" src ="<%= images.before %>" />
               </div>
-              <div class="col-6 relative" style="position:relative;margin-top:5%;">
+              <div class="col-6 relative margin-top-5" >
 
-                  <div class="after_background"style="z-index:-1;background:#014884;position:absolute;top:-10%;right:0%;width:100%;height:120%"></div>
-                  <img class="after_image width-100"  style="width:100%;height:100%" src ="<%= images.after %>"  />
+                  <div class="adjust-bottom min-z dark-navy-background absolute height-100 mobile-height-120 absolute width-100"></div>
+                  <img class=" width-100 height-100  mobile-margin-top-10" src ="<%= images.after %>"  />
               </div>
           </div>
         <%}%>
