--- a/public/assets/css/quote.css
+++ b/public/assets/css/quote.css
@@ -16,16 +16,17 @@
   top:-10%;
   left:0%;
 }
-.adjust-top{
-  top:30px;
-  right:10px;
-  width:100% !important;
-
+.adjust-right{
+  right:15px;
 }
-.adjust-bottom{
-  bottom:30px;
-  width:100% !important;
-  left:10px
+.adjust-left{
+  left:15px;
+}
+.top-30px{
+  top:30px;
+}
+.import-width-100{
+  width:100%;
 }
 .quotebutton:hover{
   box-shadow:1px 1px 9px 2px black;
