--- a/views/layout/quote/showcase.ejs
+++ b/views/layout/quote/showcase.ejs
@@ -1,4 +1,4 @@
-<div class="relative">
+<!-- <div class="relative">
 
   <div class="row relative">
 
@@ -35,4 +35,4 @@
       <img src ="./assets/showcase_3.png" class="width-100 quote_showcase_image" id="quote_showcase_background"/>
   </div>
 
-</div>
+</div> -->
