--- a/public/assets/css/quote.css
+++ b/public/assets/css/quote.css
@@ -1,51 +1,20 @@
-
-.work_container{
-  margin-top:0%;
-  width:100%;
-}
-
 .quote_input:focus{
   outline:none !important;
 }
 
-.darkbluebackg {
+/* .darkbluebackg {
   height:200px !important;
-}
+} */
 
 .before_background{
   top:-10%;
   left:0%;
 }
-.adjust-right{
-  right:15px;
-}
-.adjust-left{
-  left:15px;
-}
-.top-30px{
-  top:30px;
-}
-.import-width-100{
-  width:100%;
-}
+
 .quotebutton:hover{
   box-shadow:1px 1px 9px 2px black;
 }
-.dark-navy-background{
-  background:#014884
-}
-.light-navy-background{
-  background:#013d84
-}
-.padding-bottom-2_5{
-  padding-bottom:2.5%;
-}
-.padding-top-2_5{
-  padding-top:2.5%;
-}
-.min-z{
-  z-index:-1;
-}
+
 @media screen and (max-width:844px){
   .work_container{
     margin-top:0% !important;
@@ -64,6 +33,6 @@
     right:0px;
     left:0px;
     top:0px;
-    
+
   }
 }
