--- a/views/layout/contact/meet_the_owners.ejs
+++ b/views/layout/contact/meet_the_owners.ejs
@@ -1,19 +1,21 @@
 <div class="meet_owners_container">
-  <p class="before_after_title cfs_text_box desktop_owners_text_box mobile_owners_text_box">Meet the Owners </p>
+  <p class="width-50 mobile-width-80 text-banner">Meet the Owners </p>
 
   <div class='row margin-top-10 mobile-margin-top-15'>
     <div class="col-2"></div>
     <div class="col-8">
         <div class='row'>
+
             <div class="col-6 mobile_col_owner">
               <img class ="width-100" src = "./assets/me.png" />
-              <p class="owner_name">Marco Khodr </p>
+              <p class="owner_name akrobat font-30 white text-center">Marco Khodr </p>
             </div>
 
             <div class="col-6 mobile_col_owner">
               <img class ="width-100" src = "./assets/you.png" />
-              <p class="owner_name">Tommy Tejada </p>
+              <p class="owner_name akrobat font-30 white text-center">Tommy Tejada </p>
             </div>
+
         </div>
     </div>
   </div>
