--- a/public/assets/css/contact_us.css
+++ b/public/assets/css/contact_us.css
@@ -1,32 +1,46 @@
-.meet_owners_container{
-  margin-top:70%;padding-bottom:10%
-}
 .desktop_owners_text_box{
   width:40%;
 }
-.cfs_text_box{
-  color:white;font-family: 'Akrobat';text-align:center;font-size:40px;font-weight:bold;padding:1%;background:#00103d
+.b013{
+  background:#00103d
+}
+.padding-1{
+  padding:1%;
 }
 .margin-top-5{
   margin-top:5%;
 }
-.owner_name{
-  text-align:center;color:white;font-size:30px;font-family:'Akrobat';color:white
-}
-.we_clean{
-  font-size:40px;
-  width:100%;
-  text-align:center;
-  width:45%;
-}
+
 .we_clean_inner{
-  width:100%;background:url('./../services.png');padding-top:5%;padding-bottom:10%
-}
-.we_clean_descr{
-  border-bottom:2px solid red;font-size:35px;width:45%;
+  background:url('./../services.png');
 }
 
-.padding-left{
+.red-bottom-border{
+  border-bottom:2px solid red;
+}
+.font-35{
+  font-size:35px;
+}
+.width-45{
+  width:45%;
+}
+.margin-top-70{
+  margin-top:70%;
+}
+.padding-bottom-10{
+  padding-bottom:10%;
+}
+.font-40{
+  font-size:40px
+}
+.font-30{
+  font-size:30px;
+}
+.white{
+  color:white;
+}
+
+.padding-left-5{
   padding-left:5%;
 }
 @media screen and (max-width:844px){
@@ -62,7 +76,7 @@
   .mobile_owners_text_box{
     width:80% !important;
   }
-  .mobile_wej{
+  .mobile-col-12{
     width:100% !important;
     max-width:100% !important;
     flex:0 0 100% !important;
@@ -72,7 +86,6 @@
     width:50%;
     margin-left: 25%;
     text-align: center !important;
-
   }
 
 }
