--- a/views/layout/contact/what_we_do.ejs
+++ b/views/layout/contact/what_we_do.ejs
@@ -1,23 +1,23 @@
 <div class="work_container relative">
 
-      <div class="what_we_do_inner we_clean_inner">
+      <div class="what_we_do_inner we_clean_inner width-100 padding-top-5 padding-bottom-10">
         <div class="row mobile-margin-top-10">
 
-          <div class="col-6 mobile_wej padding-left-5">
-            <p class="what_we_do_title we_clean"> What We Clean </p>
-              <p class="what_we_do_description text-center we_clean_descr">
+          <div class="col-6 mobile-col-12 padding-left-5">
+            <p class="what_we_do_title we_clean width-45 font-40 text-center"> What We Clean </p>
+              <p class="what_we_do_description text-center we_clean_descr red-bottom-border font-35 width-45 ">
                 Window Panes
               </p>
-              <p class="what_we_do_description text-center we_clean_descr">
+              <p class="what_we_do_description text-center we_clean_descr red-bottom-border font-35 width-45">
                 Window Ledges
               </p>
-              <p class="what_we_do_description  text-center we_clean_descr">
+              <p class="what_we_do_description  text-center we_clean_descr red-bottom-border font-35 width-45">
                 Door Frames
               </p>
-              <p class="what_we_do_description  text-center we_clean_descr">
+              <p class="what_we_do_description  text-center we_clean_descr red-bottom-border font-35 width-45">
                 Window Frames
               </p>
-              <p class="what_we_do_description text-center we_clean_descr">
+              <p class="what_we_do_description text-center we_clean_descr red-bottom-border font-35 width-45">
                 Door Bottoms
               </p>
 
