--- a/public/assets/css/general.css
+++ b/public/assets/css/general.css
@@ -7,6 +7,35 @@
   padding:1%;
   background:#00103d
 }
+
+.red-bottom-border{
+  border-bottom:2px solid red;
+}
+.font-35{
+  font-size:35px;
+}
+.width-45{
+  width:45%;
+}
+.margin-top-70{
+  margin-top:70%;
+}
+.padding-bottom-10{
+  padding-bottom:10%;
+}
+.font-40{
+  font-size:40px
+}
+.font-30{
+  font-size:30px;
+}
+.white{
+  color:white;
+}
+
+.padding-left-5{
+  padding-left:5%;
+}
 .padding-bottom-15{
   padding-bottom:15%;
 }
@@ -284,10 +313,17 @@ white-background{
   width:80%;
   margin-left: 0% !important;
 }
-
-.b_a_background{
-  top:-10%;left:0%
+.b013{
+  background:#00103d
 }
+.padding-1{
+  padding:1%;
+}
+.margin-top-5{
+  margin-top:5%;
+}
+
+
 @media screen and (max-width:844px){
   .mobile-col-1{
     width:8.3333333333% !important;
@@ -391,6 +427,31 @@ white-background{
 
   .mobile-height-100{
     height:100% !important;
+  }
+
+
+  .mobile-margin-top-10{
+    margin-top:10%;
+  }
+  .mobile-margin-top-15{
+    margin-top:15%;
+  }
+
+  .mobile-width-100{
+    width:100% !important
+  }
+
+  .mobile-half-middle{
+    width:50% !important;
+    margin-left:25% !important;
+  }
+
+  .mobile-font-25{
+    font-size:24px !important;
+  }
+
+  .mobile-text-center{
+    text-align: center !important;
   }
 
 }
