--- a/views/layout/contact/meet_the_owners.ejs
+++ b/views/layout/contact/meet_the_owners.ejs
@@ -6,14 +6,14 @@
     <div class="col-8">
         <div class='row'>
 
-            <div class="col-6 mobile_col_owner">
+            <div class="col-6 mobile-col-12">
               <img class ="width-100" src = "./assets/me.png" />
               <p class="owner_name akrobat font-30 white text-center">Marco Khodr </p>
             </div>
 
-            <div class="col-6 mobile_col_owner">
+            <div class="col-6 mobile-col-12">
               <img class ="width-100" src = "./assets/you.png" />
-              <p class="owner_name akrobat font-30 white text-center">Tommy Tejada </p>
+              <p class="owner_name akrobat font-30 white text-center ">Tommy Tejada </p>
             </div>
 
         </div>
