--- a/views/layout/contact/meet_the_owners.ejs
+++ b/views/layout/contact/meet_the_owners.ejs
@@ -1,4 +1,4 @@
-<div class="meet_owners_container">
+<div class="meet_owners_container padding-top-bottom-15">
   <p class="width-50 mobile-width-80 text-banner">Meet the Owners </p>
 
   <div class='row margin-top-10 mobile-margin-top-15'>
