--- a/views/layout/contact/what_we_do.ejs
+++ b/views/layout/contact/what_we_do.ejs
@@ -5,19 +5,19 @@
 
           <div class="col-6 mobile-col-12 padding-left-5">
             <p class="what_we_do_title we_clean width-45 font-40 text-center"> What We Clean </p>
-              <p class="what_we_do_description text-center we_clean_descr red-bottom-border font-35 width-45 ">
+              <p class="what_we_do_description text-center we_clean_descr red-bottom-border font-35 width-45 mobile-font-25">
                 Window Panes
               </p>
-              <p class="what_we_do_description text-center we_clean_descr red-bottom-border font-35 width-45">
+              <p class="what_we_do_description text-center we_clean_descr red-bottom-border font-35 width-45 mobile-font-25">
                 Window Ledges
               </p>
-              <p class="what_we_do_description  text-center we_clean_descr red-bottom-border font-35 width-45">
+              <p class="what_we_do_description  text-center we_clean_descr red-bottom-border font-35 width-45 mobile-font-25">
                 Door Frames
               </p>
-              <p class="what_we_do_description  text-center we_clean_descr red-bottom-border font-35 width-45">
+              <p class="what_we_do_description  text-center we_clean_descr red-bottom-border font-35 width-45 mobile-font-25">
                 Window Frames
               </p>
-              <p class="what_we_do_description text-center we_clean_descr red-bottom-border font-35 width-45">
+              <p class="what_we_do_description text-center we_clean_descr red-bottom-border font-35 width-45 mobile-font-25">
                 Door Bottoms
               </p>
 
