--- a/views/layout/contact/what_we_do.ejs
+++ b/views/layout/contact/what_we_do.ejs
@@ -4,7 +4,7 @@
         <div class="row mobile-margin-top-10">
 
           <div class="col-6 mobile-col-12 padding-left-5">
-            <p class="what_we_do_title we_clean width-100 margin-top-5 font-40 text-center mobile-margin-left-22_5"> What We Clean </p>
+            <p class="what_we_do_title we_clean width-100 margin-top-5 font-40 mobile-text-center "> What We Clean </p>
               <p class="what_we_do_description text-center we_clean_descr red-bottom-border font-35 width-45 mobile-font-25 mobile-margin-left-22_5">
                 Window Panes
               </p>
