--- a/views/layout/contact/what_we_do.ejs
+++ b/views/layout/contact/what_we_do.ejs
@@ -8,16 +8,16 @@
               <p class="what_we_do_description text-center we_clean_descr red-bottom-border font-35 width-45 mobile-font-25 mobile-margin-left-22_5">
                 Window Panes
               </p>
-              <p class="what_we_do_description text-center we_clean_descr red-bottom-border font-35 width-45 mobile-font-25 mobile-margin-left-22_5">
+              <p class="what_we_do_description mobile-text-center we_clean_descr red-bottom-border font-35 width-45 mobile-font-25 mobile-margin-left-22_5">
                 Window Ledges
               </p>
-              <p class="what_we_do_description  text-center we_clean_descr red-bottom-border font-35 width-45 mobile-font-25 mobile-margin-left-22_5">
+              <p class="what_we_do_description  mobile-text-center we_clean_descr red-bottom-border font-35 width-45 mobile-font-25 mobile-margin-left-22_5">
                 Door Frames
               </p>
-              <p class="what_we_do_description  text-center we_clean_descr red-bottom-border font-35 width-45 mobile-font-25 mobile-margin-left-22_5">
+              <p class="what_we_do_description  mobile-text-center we_clean_descr red-bottom-border font-35 width-45 mobile-font-25 mobile-margin-left-22_5">
                 Window Frames
               </p>
-              <p class="what_we_do_description text-center we_clean_descr red-bottom-border font-35 width-45 mobile-font-25 mobile-margin-left-22_5">
+              <p class="what_we_do_description mobile-text-center we_clean_descr red-bottom-border font-35 width-45 mobile-font-25 mobile-margin-left-22_5">
                 Door Bottoms
               </p>
 
